Mit Colab erstellt

--- a/DM2025-Lab2-Homework.ipynb
+++ b/DM2025-Lab2-Homework.ipynb
@@ -143,7 +143,24 @@
         "\n",
         "**Syntax:** `###` creates a tertiary heading (H3).\n",
         "\n",
+        "\n",
+        "\n",
+        "    **Example Syntax for Content:**\n",
+        "    *   **Bold text:** `**text**`\n",
+        "    *   *Italic text*: `*text*`\n",
+        "    *   Bullet point list:\n",
+        "        * Item 1\n",
+        "        * Item 2\n",
+        "\n",
+        "\n",
+        "    Markdown Syntax to Add Image: `![Description of the Image](./your_local_folder/name_of_the_image.png)`\n",
+        "\n",
+        "    ![Example Markdown Syntax to Add Image](./pics/example_md_img.png)\n",
+        "\n",
+        "---\n",
+        "\n",
         "[Content for Preprocessing]\n",
+        "\n",
         "\n",
         "### 1.1 Preprocessing Steps\n",
         "\n",
@@ -163,20 +180,8 @@
         "* clean + stemming\n",
         "\n",
         "\n",
-        "**Example Syntax for Content:**\n",
-        "*   **Bold text:** `**text**`\n",
-        "*   *Italic text*: `*text*`\n",
-        "*   Bullet point list:\n",
-        "    * Item 1\n",
-        "    * Item 2\n",
-        "\n",
-        "\n",
-        "Markdown Syntax to Add Image: `![Description of the Image](./your_local_folder/name_of_the_image.png)`\n",
-        "\n",
-        "![Example Markdown Syntax to Add Image](https://github.com/robins114/DM2025-Lab2-Exercise/blob/main/pics/example_md_img.png?raw=1)\n",
-        "\n",
-        "\n",
         "### 1.2 Feature Engineering Steps\n",
+        "[Content for Feature Engineering]\n",
         "\n",
         "For possible feature Engineering Steps I considered:\n",
         "* Word TF-IDF (1 and 2 gram)\n",
@@ -185,9 +190,10 @@
         "* PunctuationCount\n",
         "* Text length\n",
         "\n",
-        "[Content for Feature Engineering]\n",
         "\n",
         "### 1.3 Explanation of Your Model\n",
+        "[Content for Model Explanation]\n",
+        "\n",
         "\n",
         "I considered three different TF-IDF models:\n",
         "* Logistic-Regression\n",
@@ -198,7 +204,6 @@
         "\n",
         "The best performing model on the validation set and on the kaggle competition was the Logistic Regression based on the raw data.\n",
         "\n",
-        "[Content for Model Explanation]\n",
         "\n",
         "---\n",
         "\n",
